Modified file uploader

--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ body {
 }
 
 .box input[type="button"] {
-    background-color: #a6a4a4;
+    background-color: #b5b3b3;
     color: white;
     border: none;
     padding: 10px 20px;
