--- a/drawingboard-master/css/style.css
+++ b/drawingboard-master/css/style.css
@@ -47,7 +47,7 @@ li {
 }
 
 .nav-container .about {
-    background-image: url('../../Icons/About.png');
+    background-image: url('../../Icons/about.png');
 }
 
 .nav-container a:hover {
