--- a/about.css
+++ b/about.css
@@ -53,7 +53,7 @@ body {
 }
 
 .nav-container .about {
-    background-image: url('Icons/About.png');
+    background-image: url('Icons/about.png');
 }
 
 .nav-container a:hover {
