--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ body {
 }
 
 .nav-container .about {
-    background-image: url('Icons/About.png');
+    background-image: url('Icons/about.png');
 }
 
 .nav-container a:hover {
