--- a/website2.css
+++ b/website2.css
@@ -48,7 +48,7 @@ nav {
 }
 
 .nav-container .about {
-    background-image: url('Icons/About.png');
+    background-image: url('Icons/about.png');
 }
 
 .nav-container a:hover {
