--- a/website5.css
+++ b/website5.css
@@ -26,7 +26,7 @@
 }
 
 .nav-container .about {
-    background-image: url('Icons/About.png');
+    background-image: url('Icons/about.png');
 }
 
 .nav-container a:hover {
